--- a/src/public/style.css
+++ b/src/public/style.css
@@ -39,6 +39,8 @@ html, body {
 }
 
 
+
+
 .left_column {
     margin-right: 400px;
     height: 100%;
@@ -77,6 +79,51 @@ html, body {
 
 #games_list .open_game {
     background-color: #EEE;
+    position: relative;
+}
+
+/* Generated with http://cssarrowplease.com */
+#games_list .open_game .open_game_join {
+    cursor: pointer;
+    position: absolute;
+    left: -60px;
+    margin-top: -1px;
+    background-color: #BEF;
+    padding: 10px;
+    border: 1px solid blue;
+    border-radius: 4px;
+    display: none;
+}
+#games_list .open_game:hover .open_game_join {
+    display: initial;
+}
+#games_list .open_game .open_game_join:hover {
+    background-color: #4AF;
+}
+#games_list .open_game .open_game_join:hover:after {
+    border-left-color: #4AF;
+}
+#games_list .open_game .open_game_join:after, #games_list .open_game .open_game_join:before {
+    left: 100%;
+    top: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+}
+#games_list .open_game .open_game_join:after {
+    border-left-color: #BEF;
+    border-width: 10px;
+    margin-top: -10px;
+}
+#games_list .open_game .open_game_join:before {
+    border-left-color: #00F;
+    border-width: 11px;
+    margin-top: -11px;
+}
+
+#games_list .open_game .open_game_summary {
     padding: 10px;
 }
 
