--- a/src/public/style.css
+++ b/src/public/style.css
@@ -94,7 +94,10 @@ html, body {
     display: block;
     margin: 0px auto;
     font-size: 16px;
-    padding: 16px 64px;
+    padding: 16px;
+    float: initial;
+    width: 100px;
+    text-align: center;
 }
 
 #welcome_name {
