--- a/src/public/style.css
+++ b/src/public/style.css
@@ -78,18 +78,6 @@ html, body {
     display: none;
 }
 
-#board {
-    width: 100%;
-    height: 100%;
-}
-
-#board.playing circle {
-    -webkit-transition: -webkit-transform 0.5s ease-in;
-    -moz-transition: -moz-transform 0.5s ease-in;
-    -o-transition: -o-transform 0.5s ease-in;
-    transition: transform 0.5s ease-in;
-}
-
 #control_end_turn {
     display: block;
     margin: 0px auto;
@@ -186,4 +174,34 @@ html, body {
 
 #create_game {
     border: none;
+}
+
+#board {
+    width: 100%;
+    height: 100%;
+}
+
+#board .cell {
+    fill: silver;
+    stroke: gray;
+    stroke-width: 1px;
+}
+#board.playing .cell.action {
+    fill: #DDD;
+}
+
+#board .piece {
+    stroke: gray;
+    stroke-width: 1px;
+}
+#board.playing .piece.selected {
+    stroke: black;
+    stroke-width: 8px;
+}
+
+#board.playing circle {
+    -webkit-transition: -webkit-transform 0.5s ease-in;
+    -moz-transition: -moz-transform 0.5s ease-in;
+    -o-transition: -o-transform 0.5s ease-in;
+    transition: transform 0.5s ease-in;
 }
